# fine-tuning

./: .ctxignore  .env.ctx.example  .env.example  .env.example.ctx  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.ctx.yml  docker-compose.yml  project.ctx  pyproject.toml  pyproject.toml.ctx
config/: base.yaml  base.yaml.ctx  config.ctx
config/domains/: professional_booking.yaml  professional_booking.yaml.ctx  restaurant_booking.yaml  restaurant_booking.yaml.ctx  sales_agent.yaml  sales_agent.yaml.ctx
config/models/: qwen3_0_6b.yaml  qwen3_0_6b.yaml.ctx  qwen3_4b.yaml  qwen3_4b.yaml.ctx  qwen3_5_0_8b.yaml  qwen3_5_0_8b.yaml.ctx
docker/: app.Dockerfile  contextdoc-tools.Dockerfile
notebooks/: fine_tune_forge.ipynb
scripts/: setup_env.sh  setup_env.sh.ctx
src/: cli.py  cli.py.ctx
src/exporters/: gguf_exporter.py  gguf_exporter.py.ctx  hf_exporter.py  hf_exporter.py.ctx  ollama_exporter.py  ollama_exporter.py.ctx
src/generators/: base_generator.py  base_generator.py.ctx  dataset_validator.py  dataset_validator.py.ctx  factory.py  factory.py.ctx  gemini_generator.py  gemini_generator.py.ctx  groq_generator.py  groq_generator.py.ctx  ollama_generator.py  ollama_generator.py.ctx  prompt_templates.py  prompt_templates.py.ctx
src/trainers/: config_loader.py  config_loader.py.ctx  qlora_trainer.py  qlora_trainer.py.ctx
